<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">@string/my_name</string>
    <string name="time_test">昨天 17:59</string>
    <string name="have_read">已读</string>
    <string name="nickname">昵称</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="empty" />
    <string name="send">发送</string>
    <string name="send_card">发送名片</string>
    <string name="unsupport_desc">No不需要翻译</string>
    <string name="message_content">消息体内容</string>
    <string name="file">文件</string>
    <string name="photo_album">相册</string>
    <string name="unknown_notification">未知提醒</string>
    <string name="session_group">群聊</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_account">No不需要翻译</string>
    <string name="input_nickname">No不需要翻译</string>
    <string name="input_password">No不需要翻译</string>
    <string name="chat_room">No不需要翻译</string>
    <string name="test_page">No不需要翻译</string>
    <string name="go_register">No不需要翻译</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="logining">登录中...</string>
    <string name="account_null_tip">账号不能为空</string>
    <string name="pwd_null_tip">密码不能为空</string>
    <string name="developing">开发中...</string>
    <string name="talk">聊天</string>
    <string name="logout">退出登录</string>
    <string name="create_group">创建群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="invite_friend">邀请好友</string>
    <string name="user_curr_info">获取当前用户信息</string>
    <string name="test">测试</string>
    <string name="logout_fail">退出登录失败</string>
    <string name="input_email_account">请输入邮箱账号</string>
    <string name="set_nick">设置昵称</string>
    <string name="set_password">设置密码</string>
    <string name="register_agree_protocol">注册即同意「服务条款」</string>
    <string name="go_login">已有账号，去登录</string>
    <string name="nick_null_tip">昵称不能为空</string>
    <string name="registering">注册中…</string>
    <string name="login_fail">登录失败</string>
    <string name="register_fail">注册失败</string>
    <string name="confirm">确定</string>
    <string name="loading">加载中…</string>
    <string name="register_success">注册成功</string>
    <string name="find_pwd">找回密码</string>
    <string name="retrieve_pwd_success">找回密码成功</string>
    <string name="reset_pwd_success">修改密码成功</string>
    <string name="error">错误</string>
    <string name="good_friend">好友</string>
    <string name="group_talk">群聊</string>
    <string name="mine">我的</string>
    <string name="contacts">联系人</string>
    <string name="p2p_talk">私聊</string>
    <string name="test_time">17:20</string>
    <string name="test_name">老张</string>
    <string name="test_msg">一条新消息</string>
    <string name="one">1</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="load_failed_retry">加载失败, 请点我重试</string>
    <string name="no_data">暂无数据</string>
    <string name="settings">设置</string>
    <string name="personal_info">个人信息</string>
    <string name="add">添加</string>
    <string name="tip">提示</string>
    <string name="delete_friend">删除好友</string>
    <string name="test_address">中国 浙江省</string>
    <string name="remark_name">备注名</string>
    <string name="new_friend">新的好友</string>
    <string name="agree">通过</string>
    <string name="test_subtitle">副标题</string>
    <string name="added">已添加</string>
    <string name="group_info">群聊信息</string>
    <string name="group_name">群名称</string>
    <string name="group_intro">群简介</string>
    <string name="group_notice">群公告</string>
    <string name="group_owner">群主</string>
    <string name="group_manager">管理员</string>
    <string name="group_manage">群管理</string>
    <string name="group_head">群头像</string>
    <string name="group_qrcode">群二维码</string>
    <string name="my_nick_on_group">我的群昵称</string>
    <string name="message_no_disturb">消息免打扰</string>
    <string name="group_member">群成员</string>
    <string name="dissolve_group">解散</string>
    <string name="exit_group">退出群聊</string>
    <string name="transfer_group">转让该群</string>
    <string name="invite_member">邀请成员</string>
    <string name="avatar">头像</string>
    <string name="gender">性别</string>
    <string name="sign">个性签名</string>
    <string name="region">地区</string>
    <string name="email">邮箱</string>
    <string name="phone">手机号</string>
    <string name="modify_pwd">修改密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_phone">新密码</string>
    <string name="new_mail">新邮箱号</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="remove_member">移除成员</string>
    <string name="curr_version">当前版本</string>
    <string name="nick">昵称</string>
    <string name="good_nick">一个好的昵称，让别人瞬间记住你！</string>
    <string name="nick_not_empty">昵称不能为空</string>
    <string name="welcome_login">欢迎登录</string>
    <string name="tio_im">TioIm</string>
    <string name="pwd">密码</string>
    <string name="account_register">账号注册</string>
    <string name="welcome_register">欢迎注册</string>
    <string name="set_pwd">设置密码</string>
    <string name="had_account">已有账号</string>
    <string name="server_items"><u>服务条款</u></string>
    <string name="message">消息</string>
    <string name="hangup">挂断</string>
    <string name="answer_call">接听</string>
    <string name="timer_init_time">00：00</string>
    <string name="silence">静音</string>
    <string name="hands_free">免提</string>
    <string name="waitting_for_call_req">等待对方接听…</string>
    <string name="audio_call_ntf_tip">对方向您发起语音通话邀请…</string>
    <string name="video_call_ntf_tip">对方向您发起视频通话邀请…</string>
    <string name="switch_camera">转换摄像头</string>
    <string name="delete_talk">删除聊天</string>
    <string name="share_group_talk">分享群聊</string>
    <string name="select_group">选择群聊</string>
    <string name="append_msg">附加消息</string>
    <string name="agree_add_friend">同意加为好友</string>
    <string name="title">标题</string>
    <string name="subtitle">副标题</string>
    <string name="please_input_content">请输入内容</string>
    <string name="audio_call">语音通话</string>
    <string name="video_call">视频通话</string>
    <string name="group_card">群名片</string>
    <string name="shoot">拍摄</string>
    <string name="card">名片</string>
    <string name="red_paper">红包</string>
    <string name="trans_amount">转账</string>
    <string name="select_good_friend">选择好友</string>
    <string name="remove">移除</string>
    <string name="top_talk">置顶聊天</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
    <string name="withdraw">撤回</string>
    <string name="send_msg">发消息</string>
    <string name="share_other">推给别人</string>
    <string name="select">选择</string>
    <string name="recent_talk">最近聊天</string>
    <string name="forward">转发</string>
    <string name="multi_choose">多选</string>
    <string name="complaint">投诉</string>
    <string name="pwd_not_empty">密码不能为空</string>
    <string name="pwd_reset_success_relogin">密码修改成功，请重新登录</string>
    <string name="unbind_phone_choose_other">未绑定手机号，请选择其他方式</string>
    <string name="unbind_mail_choose_other">未绑定邮箱，请选择其他方式</string>
    <string name="yuan_pwd">原密码</string>
    <string name="yuan_phone">原手机号</string>
    <string name="yuan_mail">原邮箱号</string>
    <string name="hint_inpur_yuan_pwd">请输入原密码</string>
    <string name="other_type">其它方式</string>
    <string name="phone_find_pwd">手机号找回密码</string>
    <string name="mail_find_pwd">邮箱号找回密码</string>
    <string name="mail">邮箱号</string>
    <string name="phnoe_not_empty">手机号不能为空</string>
    <string name="send_success">发送成功</string>
    <string name="current_new_version">当前已是最新版本</string>
    <string name="version_update">版本更新</string>
    <string name="let_more_company">让更多公司用上安全、可靠、自主、卓越的IM</string>
    <string name="contact_us">联系我们</string>
    <string name="dial">拨打</string>
    <string name="copyright">© 2017-2021 %s 版权所有              湘ICP备20001142号-1</string>
    <string name="unbind">未绑定</string>
    <string name="account_safe">账号与安全</string>
    <string name="your_phone">您的手机号：</string>
    <string name="your_mail">您的邮箱号：：</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_mail">绑定邮箱号</string>
    <string name="mian_disturb">免打扰</string>
    <string name="new_message_inform">新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="privacy">隐私</string>
    <string name="add_me_friend_need_auth">加我为好友时需要验证</string>
    <string name="username">用户名</string>
    <string name="type_find_me">可以通过以下方式找到我</string>
    <string name="type_add_me">可以通过以下方式添加我</string>
    <string name="group_chat">群聊</string>
    <string name="qrcode">二维码</string>
    <string name="mingpian">名片</string>
    <string name="bind_phone_next_login">绑定手机后，下次登录可使用手机号登录。</string>
    <string name="bind_mail_next_login">绑定邮箱后，下次登录可使用邮箱号登录。</string>
    <string name="bind_success">绑定成功</string>
    <string name="change_phone_login">更换手机后，下次登录可使用新手机号登录。</string>
    <string name="change_mail_login">更换邮箱后，下次登录可使用新邮箱号登录。</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="change_phone">更换手机号</string>
    <string name="change_mail">更换邮箱号</string>
    <string name="confirm_change">确认更换</string>
    <string name="person_info">个人资料</string>
    <string name="cannot_crop_pic">无法剪切选择图片</string>
    <string name="nick_not_low">昵称不能低于%d个字符</string>
    <string name="personal_sign">个性签名</string>
    <string name="good_sign">一个好的签名，让你与众不同！</string>
    <string name="head_pic">头像</string>
    <string name="only_grouper_repair">仅群主和管理员可以修改</string>
    <string name="unknown_time_length">未知时长</string>
    <string name="confirm_kickout_remember">确定踢出成员吗</string>
    <string name="kickout">踢出</string>
    <string name="exit_forbiden_language">取消禁言</string>
    <string name="exit_forbiden_language_success">取消禁言成功</string>
    <string name="forbiden_language">禁言</string>
    <string name="forbiden_language_success">禁言成功</string>
    <string name="set_success">设置成功</string>
    <string name="exit_success">取消成功</string>
    <string name="confirm_delete_remember">确定删除成员吗?</string>
    <string name="set_manager">设为管理员</string>
    <string name="exit_manager">取消管理员</string>
    <string name="ten_minnute">10分钟</string>
    <string name="one_hour">1小时</string>
    <string name="twenty_four_hour">24小时</string>
    <string name="long_forbiden_language">长期禁言</string>
    <string name="forbiden_language_time_length">禁言时长</string>
    <string name="search_name">搜索名称</string>
    <string name="choose_inform_person">选择提醒的人</string>
    <string name="beizhu_name">备注名</string>
    <string name="all_people">所有人</string>
    <string name="search_groupname">搜索群名称</string>
    <string name="groupchat_invite">群聊邀请</string>
    <string name="send_mingpian">发送名片</string>
    <string name="friend_introduce">好友推荐</string>
    <string name="clear_chat_history">清除聊天记录</string>
    <string name="tousu">投诉</string>
    <string name="group_head_update">群头像更新成功</string>
    <string name="person_info_navi">个人信息保护指引</string>
    <string name="xieyione">1、我们会遵循用户协议与隐私政策收集、使用信息，但不会仅因同意本隐私政策而采取强制捆绑的方式收集信息;</string>
    <string name="xieyitwo">2、在仅浏览时，为保障服务所必需，我们会收集设备信息、 操作日志信息，用于信息推送；</string>
    <string name="xieyithree">3、摄像头、麦克风、相册权限均不会默认开启， 有经过明示授权才会在为实现相应功能或服务时使用， 会在功能或服务不需要时而通过您授权的权限收集信息。</string>
    <string name="query_whole">查看完整版</string>
    <string name="user_protocal">《用户协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="not_agree">不同意并退出</string>
    <string name="take_photo">拍照</string>
    <string name="abulm">相册</string>
    <string name="report">举报</string>
    <string name="add_to_emo">添加到表情</string>
    <string name="chinese">中文</string>
    <string name="yuenanyu">越南语</string>
</resources>