<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_session_msg_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_withdraw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/withdraw"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/copy"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_forward"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/forward"
            android:visibility="visible"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_multi_choose"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/multi_choose"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />
        <TextView
            android:id="@+id/tv_collect"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/add_to_emo"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />
        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_complaint"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_session_msg_dialog_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/report"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

</FrameLayout>
