<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_protect_guide_dialog">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/person_info_navi"
            android:textColor="@color/blue_4c94ff"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/xieyione"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/xieyitwo"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content1" />

        <TextView
            android:id="@+id/tv_content3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/xieyithree"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content2" />

        <LinearLayout
            android:id="@+id/ll_viewGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_whole"
                android:textColor="@color/gray_666666"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_userProtocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_protocal"
                android:textColor="@color/blue_4c94ff"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="和"
                android:textColor="@color/gray_666666"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_privatePolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/blue_4c94ff"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_negativeBtn"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/tio_dialog_negative_btn_bg"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/not_agree"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_viewGuide" />

        <TextView
            android:id="@+id/tv_positiveBtn"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/tio_dialog_positive_btn_bg"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/tv_negativeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_negativeBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>