<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_chinese"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/chinese"
        android:textColor="@color/tio_dialog_btn_selector"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_e9e9e9" />

    <TextView
        android:id="@+id/tv_vi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/yuenanyu"
        android:textColor="@color/tio_dialog_btn_selector"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_f8f8f8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/gray_f4f5f6" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/gray_111111"
        android:textSize="@dimen/sp_16" />

</LinearLayout>