<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/tio_group_oper_dialog_top_item_bg" />

    <TextView
        android:id="@+id/tv_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/tio_dialog_btn_selector"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_f8f8f8" />

    <TextView
        android:id="@+id/tv_pickPhoto"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/abulm"
        android:textColor="@color/tio_dialog_btn_selector"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gray_f8f8f8" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/gray_111111"
        android:textSize="@dimen/sp_16" />

</LinearLayout>