<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_f4f5f6"
    android:orientation="vertical">

    <com.watayouxiang.androidutils.widget.WtTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_isLightMode="true"
        app:tb_background="@color/gray_f4f5f6"
        />



      <!--加我好友时需要验证-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:background="@color/white"
            >

            <TextView
                style="@style/AccountTitle"
                android:textStyle="bold"
                android:text="@string/add_me_friend_need_auth" />

            <CheckBox
                android:id="@+id/switch_verifyAddFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/btn_switch"
                android:layout_marginRight="@dimen/dp_15"
                android:checked="false" />

        </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/type_find_me"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_B3B3B3"
        android:textSize="@dimen/sp_14"
        />

        <!--允许别人搜索到我-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:background="@color/white"
            >

            <TextView
                style="@style/AccountTitle"
                android:textStyle="bold"
                android:text="UUID" />

            <CheckBox
                android:id="@+id/switch_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/btn_switch"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:checked="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_e9e9e9"
                android:layout_marginLeft="15dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <!--消息提醒开关-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:background="@color/white"
            >

            <TextView
                style="@style/AccountTitle"
                android:textStyle="bold"
                android:text="@string/phone" />

            <CheckBox
                android:id="@+id/switch_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:button="@drawable/btn_switch"
                android:checked="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_e9e9e9"
                android:layout_marginLeft="15dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:background="@color/white"
            >

            <TextView
                style="@style/AccountTitle"
                android:textStyle="bold"
                android:text="@string/mail" />

            <CheckBox
                android:id="@+id/switch_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:button="@drawable/btn_switch"
                android:checked="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_e9e9e9"
                android:layout_marginLeft="15dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white"
        >

        <TextView
            style="@style/AccountTitle"
            android:textStyle="bold"
            android:text="@string/username" />

        <CheckBox
            android:id="@+id/switch_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:button="@drawable/btn_switch"
            android:checked="false" />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/type_add_me"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_B3B3B3"
        android:textSize="@dimen/sp_14"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white"
        >

        <TextView
            style="@style/AccountTitle"
            android:textStyle="bold"
            android:text="@string/group_chat" />

        <CheckBox
            android:id="@+id/switch_group_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:button="@drawable/btn_switch"
            android:checked="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e9e9e9"
            android:layout_marginLeft="15dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white"
        >

        <TextView
            style="@style/AccountTitle"
            android:textStyle="bold"
            android:text="@string/qrcode" />

        <CheckBox
            android:id="@+id/switch_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:button="@drawable/btn_switch"
            android:checked="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e9e9e9"
            android:layout_marginLeft="15dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white"
        >

        <TextView
            style="@style/AccountTitle"
            android:textStyle="bold"
            android:text="@string/mingpian" />

        <CheckBox
            android:id="@+id/switch_business_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:button="@drawable/btn_switch"
            android:checked="false" />

    </RelativeLayout>



</LinearLayout>